<resources>
    <string name="app_name">Batch 54</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="student_id">Student ID</string>
    <string name="student_email">Student Email</string>
    <string name="submit">Submit</string>
    <string name="home_menu">Home</string>
    <string name="upcoming_menu">Upcoming</string>
    <string name="chat_menu">Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trending_menu">Trending</string>
    <string name="downvote">Downvote</string>
    <string name="upvote">Upvote</string>
    <string name="story_image">story image</string>
    <string name="add_story">Add Story</string>
    <string name="mahadi_hasan">Mahadi Hasan</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="load_picture">Load Picture</string>
    <string name="confirm">Confirm</string>
    <string name="message">message</string>
</resources>