<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_menu"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_menu" />
    <item
        android:id="@+id/upcoming_menu"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_event_24"
        android:title="@string/upcoming_menu" />

    <item
        android:id="@+id/trending_menu"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_trending_up_24"
        android:title="@string/trending_menu" />

    <item
        android:id="@+id/chat_menu"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_bubble_24"
        android:title="@string/chat_menu" />
</menu>